# cognitivestaffing

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  agent_setup.py  app.py  auth.py  config.py  config_loader.py  critical_fields.json  esco_utils.py  i18n.py  openai_utils.py  pyproject.toml  pytest.ini  question_logic.py  requirements-optional.txt  requirements.txt  role_field_map.json  salary_benchmarks.json  schemas.py  setup.cfg  skill_market_insights.json  tone_presets.json  utils.py  vacalyser_schema.json  wizard.py  wizard_agents.py  wizard_layout.py  wizard_logic.py  wizard_router.py  wizard_tools.py
.devcontainer/: devcontainer.json
.git-hooks/: pre-commit
.streamlit/: config.toml  pages.json
.tooling/: promptgen.py
adapters/: __init__.py  profile_to_envelope.py  v1_to_v2.py
agents/: __init__.py
artifacts/: mypy.baseline.txt  pip.freeze.txt  pytest.full.baseline.txt  schema_report.md
cli/: __init__.py  extract.py  generate_schema.py  rebuild_vector_store.py  reset_api_flags.py
components/: chatkit_widget.py  chip_multiselect.py  diary.py  form_fields.py  model_selector.py  profile_editor.py  reasoning_selector.py  requirements_insights.py  salary_dashboard.py  stepper.py  tailwind_injector.py  verbosity_selector.py  widget_factory.py  wizard_schema_types.py
config/: __init__.py  models.py
constants/: __init__.py  flow_mode.py  keys.py  style_variants.py
core/: __init__.py  analysis_tools.py  confidence.py  config.py  critical_fields.py  errors.py  esco_utils.py  extraction.py  field_suggestions.py  job_ad.py  location_context.py  normalization.py  ocr_backends.py  openai_utils.py  preview.py  progress_updates.py  propagate.py  regexes.py  rules.py  schema.py  schema_defaults.py  schema_guard.py  schema_migrations.py  schema_registry.py  ss_bridge.py  suggestions.py  validation.py  validators.py
docs/: CHANGELOG.md  DEV_GUIDE.md  ERROR_HANDLING.md  EXAMPLE.md  FAQ.md  SCHEMA_VERSIONING.md  Troubleshooting.md  deployment.md  design-system.md  dynamic_flow_plan.md  dynamic_flow_tasks.json  ingestion.md  json_pipeline.md  key_registry.md  llm_config_and_debugging.md  llm_integration_review.md  mypy_errors_2024-10-08.txt  mypy_typing_status.md  refactor_targets.md  schema_gap_analysis.md  telemetry.md  widget_factory_pattern.md  wizard_flow.md
esco/: __init__.py  classify.py  normalize.py
exports/: __init__.py  models.py  transform.py
generators/: __init__.py  interview_guide.py  job_ad.py
images/: customer_contact_toggle_preview.md  jobad_details_expander_preview.md  onboarding_source_inputs_preview.md  origin_markers_preview.md  stepper_preview.md  summary_compliance_toggles_preview.md  validation_area_preview.md
infra/: __init__.py  deployment.toml  logging.py
ingest/: __init__.py  branding.py  extractors.py  heuristics.py  ocr.py  reader.py  types.py
integrations/: esco.py  esco_offline.json
llm/: __init__.py  client.py  context.py  cost_router.py  dual.py  extract_profile.py  followup_contract.py  gap_analysis.py  interview.py  json_repair.py  model_router.py  openai_responses.py  output_parsers.py  profile_normalization.py  progress_inbox.py  prompts.py  rag_pipeline.py  response_schemas.py  suggestions.py  team_advisor.py
models/: __init__.py  decision_card.py  evidence.py  interview_guide.py  need_analysis.py  need_analysis_envelope.py  need_analysis_v2.py  progress_updates.py
nlp/: bias.py  cue_detection.py  entities.py  prepare_text.py
openai_utils/: __init__.py  api.py  client.py  errors.py  extraction.py  payloads.py  schemas.py  server.py  tools.py
pages/: 01_jobad.py  01_wizard.py  02_company.py  03_team.py  04_role_tasks.py  04b_skills.py  05_benefits.py  05_skills.py  06_benefits.py  06_interview.py  07_interview.py  07_summary.py  08_summary.py  __init__.py  advantages.py  followups.py  gap_analysis.py  legal_information.py  tech_overview.py  🏠_Advantages.py
pipelines/: __init__.py  extraction.py  followups.py  matching.py  need_analysis.py  profile_summary.py  team_advice.py  workflow.py
prompts/: __init__.py  registry.json  registry.yaml
questions/: __init__.py  augment.py  generate.py  missing.py
schema/: followups.schema.json  job_posting_extraction.schema.json  need_analysis.schema.json  need_analysis_envelope.schema.json  need_analysis_v2.schema.json
schemas/: __init__.py
scripts/: __init__.py  check_localization.py  propagate_schema.py
sidebar/: __init__.py  salary.py
state/: __init__.py  ai_contributions.py  ai_failures.py  autosave.py  ensure_state.py  progress_inbox.py
styles/: cognitive_needs.css  cognitive_needs_light.css  vacalyser.css  vacalyser_light.css
tests/: conftest.py  test_ai_audit_trail.py  test_aliases.py  test_analysis_tools.py  test_ask_followups.py  test_auto_reask_loop.py  test_autodetect_lang.py  test_benefit_suggestions.py  test_benefits_and_process_extraction.py  test_bias_check.py  test_bindings.py  test_boolean_search.py  test_business_context.py  test_chatkit_server.py  test_circuit_breaker.py  test_classification.py  test_cli_extract.py  test_company_fields.py  test_company_research.py  test_company_size.py  test_company_step_bindings.py  test_company_validators.py  test_config.py  test_contact_normalization.py  test_contact_utils.py  test_core_extraction.py  test_core_suggestions.py  test_cost_router.py  test_custom_errors.py  test_diary.py  test_e2e_extraction.py  test_env_cleanup.py  test_esco.py  test_esco_export_refs.py  test_esco_features.py  test_esco_integration.py  test_esco_selector_regression.py  test_esco_utils.py  test_export_field_metadata.py  test_export_utils.py  (+180 more)
typing_shims/: __init__.py  beautifulsoup.py  requests.py  streamlit.py  streamlit_components.py
ui/: __init__.py  wizard_ui.py  wizard_uxkit_guidedflow_20260110.py
ui_views/: __init__.py  advantages.py  tech_overview.py
utils/: __init__.py  admin_debug.py  circuit_breaker.py  contact.py  diary.py  env_cleanup.py  errors.py  export.py  i18n.py  json_parse.py  json_repair.py  llm_state.py  logging_context.py  normalization.py  patterns.py  retry.py  (+9 more)
(+157 files in other folders)
