[project]
name = "cognitivestaffing"
version = "1.1.0"
requires-python = ">=3.11"
# Dependencies are managed exclusively via requirements.txt to avoid duplicate sources.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E402",
    "E203",
    # Ruff doesn't implement pycodestyle W503; leave noted for parity with historical flake8 config.
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "core.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "esco.*"
ignore_errors = true

[tool.coverage.report]
fail_under = 88 # CI_COVERAGE_THRESHOLD
show_missing = true

