[project]
name = "cognitivestaffing"
version = "1.1.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "backoff>=2.2",
    "beautifulsoup4>=4.12",
    "chardet>=5.0",
    "email-validator>=2.1",
    "httpx>=0.24",
    "jsonschema>=4.18",
    "langchain>=0.2,<0.3",
    "langdetect>=1.0",
    "lxml>=4.9",
    "openai>=1.30.0,<3.0.0",
    "opentelemetry-api==1.26.0",
    "opentelemetry-exporter-otlp==1.26.0",
    "opentelemetry-sdk==1.26.0",
    "plotly>=5.20",
    "pycountry>=23.12",
    "pydantic>=2.5,<3.0",
    "PyMuPDF>=1.26",
    "pypdf>=4.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "streamlit>=1.33",
    "streamlit-sortables==0.3.1",
    "types-PyYAML",
    "types-requests",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]
ingest = [
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0-py3-none-any.whl",
    "mammoth>=1.7",
    "numpy>=1.24,<2.0",
    "pdf2image>=1.17",
    "pillow>=10.0",
    "pytesseract>=0.3",
    "readability-lxml>=0.8.1",
    "spacy>=3.7,<4.0",
    "trafilatura>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "cognitivestaffing"
version = "1.1.0"
package-mode = false

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E402",
    "E203",
    # Ruff doesn't implement pycodestyle W503; leave noted for parity with historical flake8 config.
]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
exclude = "(?x)(^build/|^tests/)"

[[tool.mypy.overrides]]
module = [
    "agents",
    "agents.*",
    "docx",
    "docx.*",
    "dotenv",
    "fitz",
    "jsonschema",
    "jsonschema.*",
    "langchain.output_parsers",
    "langchain.schema",
    "openai",
    "openai.*",
    "opentelemetry",
    "opentelemetry.*",
    "pydantic",
    "pydantic.*",
    "plotly",
    "plotly.*",
    "PIL", 
    "PIL.*", 
    "streamlit.components", 
    "streamlit.components.*", 
    "pycountry",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "core.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "esco.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "ingest.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "streamlit",
    "streamlit.*",
    "streamlit_sortables",
    "requests",
    "requests.*",
    "bs4",
    "langdetect",
    "yaml",
    "backoff",
    "fastapi",
    "fastapi.*",
    "httpx",
    "httpx.*",
]
ignore_missing_imports = true 

[[tool.mypy.overrides]]
module = [
    "components.requirements_insights",
    "llm.openai_responses",
    "models.need_analysis",
    "cli.rebuild_vector_store",
    "app",
    "nlp.entities",
    "wizard_pages.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "wizard._agents",
    "wizard._logic",
    "wizard._openai_bridge",
    "wizard.interview_step",
    "wizard.wizard",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.report]
fail_under = 88 # CI_COVERAGE_THRESHOLD
show_missing = true

