[metadata]
name = vacalyzer
version = 0.2.0
description = AI-powered job vacancy analyzer and profile builder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KleinerBaum/cognitivestaffing
author = GerriF
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Human Resources
    Intended Audience :: Developers
    Topic :: Office/Business :: Human Resources
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.10
install_requires =
    openai>=0.27.0
    streamlit>=1.20
    requests>=2.0
    PyMuPDF>=1.20.0
    pytesseract>=0.3.8
    Pillow>=9.0
    python-docx>=0.8.11
    readability-lxml>=0.8.1
    beautifulsoup4>=4.9.0
    lxml>=4.9.0
    pydantic>=1.10

[options.packages.find]
exclude =
    tests*
    docs*
    images*
    pages*

[options.entry_points]
console_scripts =
    vacalyzer-extract = cli.extract:main

[flake8]
max-line-length = 120
exclude = pages
