[metadata]
name = vacalyser
version = 0.3.0
description = AI-powered vacancy analysis with ESCO and vector-store RAG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KleinerBaum/cognitivestaffing
author = Vacalyser Authors
license = MIT
classifiers =
    Intended Audience :: Human Resources
    Intended Audience :: Developers
    Topic :: Office/Business :: Human Resources
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.10
install_requires =
    streamlit>=1.33

[flake8]
max-line-length = 120
extend-ignore = E203,W503

[mypy]
python_version = 3.11
ignore_missing_imports = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional = True
strict_equality = True
