[metadata]
name = vacalyser
version = 0.3.0
description = AI-powered vacancy analysis with ESCO and vector-store RAG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KleinerBaum/cognitivestaffing
author = Vacalyser Authors
license = MIT
classifiers =
    Intended Audience :: Human Resources
    Intended Audience :: Developers
    Topic :: Office/Business :: Human Resources
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.11
install_requires =
    openai>=1.30
    streamlit>=1.33
    pydantic>=2.5
    pymupdf>=1.24
    pillow>=10.0
    python-docx>=0.8.11
    readability-lxml>=0.8.1
    beautifulsoup4>=4.12
    lxml>=4.9
    requests>=2.31
    tenacity>=8.2
    typing-extensions>=4.8
    backoff>=2.2
    streamlit-sortables>=0.3.1
    jsonschema>=4.0
    httpx>=0.24

[options.extras_require]
dev =
    pytest>=8.0
    flake8>=6.0
    mypy>=1.0
    black>=23.0
    types-requests>=2.31

[options.entry_points]
console_scripts =
    vacalyser-extract = cli.extract:main

[flake8]
max-line-length = 120
extend-ignore = E203,W503

[mypy]
python_version = 3.11
ignore_missing_imports = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional = True
strict_equality = True

[mypy-core.*]
ignore_errors = True

[mypy-esco.*]
ignore_errors = True
